# jimmy-skills

./: .gitignore  CLAUDE.md  Cargo.toml  DEMO.md  README.md  ROUTER_README.md  TRY_ME.md
.claude/: settings.local.json
.claude/skills/jimmy-candidates/: SKILL.md  jimmy-candidates.md
.claude/skills/jimmy-classify/: SKILL.md  jimmy-classify.md
.claude/skills/jimmy-fuzz/: SKILL.md  jimmy-fuzz.md
.claude/skills/jimmy-montecarlo/: SKILL.md  jimmy-montecarlo.md
.claude/skills/jimmy-search/: SKILL.md  jimmy-search.md
.claude/skills/jimmy-summarize/: SKILL.md  jimmy-summarize.md
.claude/skills/jimmy-testdata/: SKILL.md  jimmy-testdata.md
.claude/skills/jimmy-transform/: SKILL.md  jimmy-transform.md
.claude/skills/jimmy-validate/: SKILL.md  jimmy-validate.md
crates/jimmy-router/: Cargo.toml
crates/jimmy-router/src/: config.rs  fanout.rs  handler.rs  lib.rs  main.rs  synthesizer.rs  types.rs
crates/jimmy-router/tests/: handler.rs  tcp_bind.rs
crates/jimmy-skill/: Cargo.toml
crates/jimmy-skill/src/: api.rs  cli.rs  client.rs  lib.rs  main.rs  output.rs  parallel.rs
crates/jimmy-skill/tests/: cli_args.rs  integration.rs  output_contract.rs  parallel.rs  stats_parser.rs
