[workspace]
resolver = "2"
members = ["crates/jimmy-skill"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3"

[workspace.lints.clippy]
all = "deny"
