[workspace]
resolver = "2"
members = ["crates/jimmy-skill", "crates/jimmy-router"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3"
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "timeout"] }
toml = "1"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[workspace.lints.clippy]
all = "deny"
