[package]
name = "jimmy-router"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jimmy-router"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
assert-json-diff = "2"

[lints]
workspace = true
